# elixir-go-rust

./: README.md
elixir/basic/: main.ex
elixir/web_crawler/: .gitignore  README.md  mix.exs  web_crawler
elixir/web_crawler/lib/: crawler.ex  utils.ex
elixir/web_crawler/lib/cli/: cli.ex
elixir/web_crawler/test/: web_crawler_test.exs
golang/: main.go
golang/web_crawler/: .gitignore  go.mod  go.sum  main.go
golang/web_crawler/utils/: html.go  http.go  measuer.go  wait_group.go
rust/: Cargo.toml  main.rs
rust/web_crawler/: Cargo.toml  bench.yml
rust/web_crawler/src/: crawler.rs  error.rs  main.rs  measure.rs
rust/web_crawler/src/spiders/: mod.rs  web.rs
