[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = { version = "4.3.10", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [ "native-tls", "stream" ] }
sysinfo = "0.29.3"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
tokio-stream = "0.1.14"
futures = "0.3"

thiserror = "1.0.40"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.17.1"
http = "0.2"

